--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <button class="buttonone"> Download Resume</button>
+            <button class="buttonone"> Download Resumes</button>
         </div>
     </section>
 
