--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="navbar">
         <div>
-            <img class="imagepart" src="/images//logo.png" />
+            <img class="imagepart" src="/images/logo.png" />
         </div>
 
         <div>
