udate 2 add web part

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 
-    <!-- navabr -->
+    <!-- navabr start -->
 
     <section class="navbar">
         <div>
@@ -23,6 +23,166 @@
             <button class="buttonone"> Download Resumes</button>
         </div>
     </section>
+
+    <!-- navabr end -->
+
+
+    <!-- Hero section start -->
+
+    <section class="herosection">
+
+
+        <div>
+            <div class="imageparthero">
+                <div>
+                    <img src="images/Group.png" />
+                </div>
+            </div>
+
+            <div>
+                <h1 class="heroheader">"In the near future, i hope to <br> become a developer."</h1>
+            </div>
+
+            <div>
+                <p class="herop"> My Name is ashraful islam. One day i will be best developer in the country. i love to
+                    learn coding.
+                    <br> i hopt i can do this. i will learn next.js
+                </p>
+            </div>
+
+            <div class="buttonherofull">
+                <div>
+                    <button class="buttonhero"> Contact with me </button>
+                </div>
+            </div>
+
+        </div>
+
+
+    </section>
+    <!-- Hero section end -->
+
+
+    <!-- Why Web Development part start -->
+    <section class="fullweb">
+
+        <div class="webtitle">
+            <h1> Why Web Development ?? </h1>
+            <p> Web development is so popular nowadays. I love learning and want<br> to become a developer. Yes, one day
+                I
+                will learn a lot, Inshallah</p>
+        </div>
+
+
+        <div class="webone">
+
+            <div>
+                <h1 class="webonehead"> I will do coding and <br> change the world</h1>
+                <p class="webonep"> yes i can do it. now i learning code <br> so one day i can will be good developer
+                </p>
+                <button class="webonebutton"> Lear More</button>
+            </div>
+
+
+            <div>
+                <img src="images/Layer_1.png">
+            </div>
+        </div>
+
+
+        <!-- two part start -->
+        <div class="webtwo">
+
+            <div>
+                <img src="images/Group 3.png">
+            </div>
+            <div>
+                <h1 class="webonehead"> I will do coding and <br> change the world</h1>
+                <p class="webonep"> yes i can do it. now i learning code <br> so one day i can will be good developer
+                </p>
+                <button class="webonebutton"> Lear More</button>
+            </div>
+        </div>
+
+        <!-- two part end -->
+
+
+        <!-- three start -->
+
+        <div class="webone">
+
+            <div>
+                <h1 class="webonehead"> I will do coding and <br> change the world</h1>
+                <p class="webonep"> yes i can do it. now i learning code <br> so one day i can will be good developer
+                </p>
+                <button class="webonebutton"> Lear More</button>
+            </div>
+
+
+            <div>
+                <img src="images/Group 4.png">
+            </div>
+        </div>
+
+        <!-- three part end -->
+
+
+
+    </section>
+    <!-- why web development part end -->
+
+
+    <!-- My Inspiration part start -->
+    <section class="myins">
+
+        <h1 class="myins"> My Inspiration</h1>
+        <p>"Web development involves building and maintaining websites to ensure they are functional, user-friendly, and
+            visually appealing. It <br> has become an essential skill in today digital age, where creating an online
+            presence is crucial for businesses and individuals alike</p>
+
+    </section>
+    <!-- My Inspiration part end -->
+
+
+    <!-- video part -->
+
+    <section class="videopart">
+        <div>
+            <iframe width="1076" height="550" src="https://www.youtube.com/embed/aiQ8ihol6LQ?si=sb4d5xXAtsTHHH_W"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+    </section>
+
+    <!-- video part end -->
+
+
+    <!-- my current target -->
+    <section>
+
+        <div>
+            <h1 class="myins"> My Current Target</h1>
+            <p>"Web development involves building and , user-friendly, and
+                visually appealing. It <br> has become an essential skill an online
+                presence is crucial for businesses and individuals alike</p>
+
+        </div>
+
+        <div class="fulltarget">
+
+            <div class="targetone">
+
+                <h1>hello</h1>
+
+
+            </div>
+
+        </div>
+
+    </section>
+    <!-- my current target -->
 
 </body>
 
