--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         <div>
             <h1 class="myins"> My Current Target</h1>
-            <p>"Web development involves building and , user-friendly, and
+            <p>"Web development involves building and , suser-friendly, and
                 visually appealing. It <br> has become an essential skill an online
                 presence is crucial for businesses and individuals alike</p>
 
